@@ -66,10 +66,8 @@ class CMultiSelect extends CTag {
 		}
 
 		if (array_key_exists('popup', $options)) {
-			foreach (['parameters', 'width', 'height'] as $option) {
-				if (array_key_exists($option, $options['popup'])) {
-					$params['popup'][$option] = $options['popup'][$option];
-				}
+			if (array_key_exists('parameters', $options['popup'])) {
+				$params['popup']['parameters'] = $options['popup']['parameters'];
 			}
 		}
 
